--- a/calculator.html
+++ b/calculator.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="card text-center">
             <div class="card-header">
-@@ -24,9 +33,22 @@ <h2>Simple Calculator</h2>
+		 <h2>Simple Calculator</h2>
                     <button type="button" class="btn btn-primary btn-lg btn-block mt-4" onclick="divide()">
                         Divide
                     </button>
@@ -38,7 +38,6 @@
         </div>
         <div class="footer">
             <img src="./footer-logo.svg" class="footer-img" />
-            &copy; Copyright 2021 Maveric Systems Limited
         </div>
 </body>
 
