--- a/calculator.html
+++ b/calculator.html
@@ -20,13 +20,12 @@
     <div class="container">
         <div class="card text-center">
             <div class="card-header">
-@@ -27,6 +36,10 @@ <h2>Simple Calculator</h2>
+		 <h2>Simple Calculator</h2>
                 </div>
             </div>
         </div>
         <div class="footer">
             <img src="./footer-logo.svg" class="footer-img" />
-            &copy; Copyright 2021 Maveric Systems Limited
         </div>
 </body>
 
